{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 21,
  "lineage": "acb93654-ae00-fe99-92a0-13e8eca15f19",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:739275445912:network-acl/acl-07fa5bd72f690ff09",
            "default_network_acl_id": "acl-07fa5bd72f690ff09",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-07fa5bd72f690ff09",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "739275445912",
            "region": "ap-south-1",
            "subnet_ids": [
              "subnet-000c26767dc1518e5",
              "subnet-04d3c80c39cc50389",
              "subnet-0605c86d314529517",
              "subnet-0f5b4f16fb22009d9"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "demo-vpc-10.0.0.0/16",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "demo-vpc-10.0.0.0/16",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c2f97d20e563cab1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:739275445912:route-table/rtb-0de0dd179192b1eb9",
            "default_route_table_id": "rtb-0de0dd179192b1eb9",
            "id": "rtb-0de0dd179192b1eb9",
            "owner_id": "739275445912",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "demo-vpc-10.0.0.0/16",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "demo-vpc-10.0.0.0/16",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0c2f97d20e563cab1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:739275445912:security-group/sg-03b0f0298b276d8a8",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-03b0f0298b276d8a8",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "739275445912",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "demo-vpc-10.0.0.0/16",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "demo-vpc-10.0.0.0/16",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c2f97d20e563cab1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:739275445912:internet-gateway/igw-0232a1f78bdd9b089",
            "id": "igw-0232a1f78bdd9b089",
            "owner_id": "739275445912",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "demo-vpc-10.0.0.0/16",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "demo-vpc-10.0.0.0/16",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c2f97d20e563cab1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0232a1f78bdd9b089",
            "id": "r-rtb-0936592330ff65a531080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-south-1",
            "route_table_id": "rtb-0936592330ff65a53",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:739275445912:route-table/rtb-091c7c8cb72b7c61f",
            "id": "rtb-091c7c8cb72b7c61f",
            "owner_id": "739275445912",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "demo-vpc-10.0.0.0/16",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "demo-vpc-10.0.0.0/16",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2f97d20e563cab1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:739275445912:route-table/rtb-0a48078aa2e5c6af3",
            "id": "rtb-0a48078aa2e5c6af3",
            "owner_id": "739275445912",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "demo-vpc-10.0.0.0/16",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "demo-vpc-10.0.0.0/16",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2f97d20e563cab1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:739275445912:route-table/rtb-0936592330ff65a53",
            "id": "rtb-0936592330ff65a53",
            "owner_id": "739275445912",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0232a1f78bdd9b089",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "demo-vpc-10.0.0.0/16",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "demo-vpc-10.0.0.0/16",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2f97d20e563cab1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09ccc9e25bc09ce20",
            "region": "ap-south-1",
            "route_table_id": "rtb-091c7c8cb72b7c61f",
            "subnet_id": "subnet-0f5b4f16fb22009d9"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00db17dfd3575b8ee",
            "region": "ap-south-1",
            "route_table_id": "rtb-0a48078aa2e5c6af3",
            "subnet_id": "subnet-0605c86d314529517"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04dc3eaa9ea872752",
            "region": "ap-south-1",
            "route_table_id": "rtb-0936592330ff65a53",
            "subnet_id": "subnet-000c26767dc1518e5"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a7c51939afe7bf36",
            "region": "ap-south-1",
            "route_table_id": "rtb-0936592330ff65a53",
            "subnet_id": "subnet-04d3c80c39cc50389"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:739275445912:subnet/subnet-0f5b4f16fb22009d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f5b4f16fb22009d9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "739275445912",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "demo-vpc-10.0.0.0/16",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "demo-vpc-10.0.0.0/16",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c2f97d20e563cab1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:739275445912:subnet/subnet-0605c86d314529517",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0605c86d314529517",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "739275445912",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "demo-vpc-10.0.0.0/16",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "demo-vpc-10.0.0.0/16",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c2f97d20e563cab1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:739275445912:subnet/subnet-000c26767dc1518e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-000c26767dc1518e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "739275445912",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "demo-vpc-10.0.0.0/16",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "demo-vpc-10.0.0.0/16",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c2f97d20e563cab1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:739275445912:subnet/subnet-04d3c80c39cc50389",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d3c80c39cc50389",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "739275445912",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "demo-vpc-10.0.0.0/16",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "demo-vpc-10.0.0.0/16",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c2f97d20e563cab1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:739275445912:vpc/vpc-0c2f97d20e563cab1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07fa5bd72f690ff09",
            "default_route_table_id": "rtb-0de0dd179192b1eb9",
            "default_security_group_id": "sg-03b0f0298b276d8a8",
            "dhcp_options_id": "dopt-0c8a2770e3a8307d8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c2f97d20e563cab1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0de0dd179192b1eb9",
            "owner_id": "739275445912",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "demo-vpc-10.0.0.0/16",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "demo-vpc-10.0.0.0/16",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}